WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
308457
Ignore non-trusted events in <select> and <option>'s default handlers
https://bugs.webkit.org/show_bug.cgi?id=308457
Summary
Ignore non-trusted events in <select> and <option>'s default handlers
Anne van Kesteren
Reported
2026-02-23 03:21:13 PST
.
Attachments
Add attachment
proposed patch, testcase, etc.
Anne van Kesteren
Comment 1
2026-02-23 03:23:46 PST
Pull request:
https://github.com/WebKit/WebKit/pull/59233
Radar WebKit Bug Importer
Comment 2
2026-02-27 19:12:01 PST
<
rdar://problem/171404071
>
EWS
Comment 3
2026-03-13 02:41:30 PDT
Committed
309194@main
(ffdc7b0034b3): <
https://commits.webkit.org/309194@main
> Reviewed commits have been landed. Closing PR #59233 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug