Ignore non-trusted events in <select> and <option>'s default handlers https://bugs.webkit.org/show_bug.cgi?id=308457 rdar://171404071

Reviewed by Ryosuke Niwa.

The appearance: auto control already ignores these events, but at a
deeper level. For appearance: base we also need to ignore them at the
element-level. For now we only ignore them for menu lists as
historically synthetic events have worked for list boxes and we're not
sure whether that should change.

This updates several tests to use end user events instead.

Canonical link: https://commits.webkit.org/309194@main